--- a/Conferencia/Base/index.html
+++ b/Conferencia/Base/index.html
@@ -15,7 +15,7 @@
 
   <nav class="navbar navbar-expand-lg navbar-light bg-dark bg-gradient">
     <div class="container-fluid">
-      <img src="https://i.ibb.co/hRn3Lg0/codoacodo.png" width="12%" alt="#">
+      <a href="https://www.buenosaires.gob.ar/educacion/codocodo/el-programa"><img src="https://i.ibb.co/hRn3Lg0/codoacodo.png" width="50%" alt="logo codo a codo"  ></a> 
       
       <a class="navbar-brand text-white" href="#">Conf Bs As</a>
 
@@ -34,7 +34,7 @@
             <a class="nav-link text-secondary" href="#form">Conviértete en orador</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-success" href="#">Comprar tickets</a>
+            <a class="nav-link text-success" href="../Tickets/index.html">Comprar tickets</a>
           </li>
         </ul>
 
@@ -69,7 +69,7 @@
       <p class="flex-end col-5 fs-5">Bs As llega por primera vez a Argentina. Un evento para compartir con nuestra comunidad el conocimiento y experiencia de los expertos que están creando el futuro de Internet. Ven a conocer a miembros del evento, a otros estudiantes de Codo a Codo y los oradores de primer nivel que tenemos para ti. Te esperamos!</p>
       </div>
       <button id="orador" type="button" class="btn btn-outline-light text-withe"><a href="#form" class="text-white text-decoration-none">Quiero ser orador</a></button>
-      <button type="button" class="btn btn-success text-withe" >Comprar tickets</button>
+      <button type="button" class="btn btn-success text-withe" onclick="window.open('../Tickets/index.html'); ;" href="../Tickets/index.html" >Comprar tickets</button>
     </div>
 
   </div>
