--- a/Conferencia/Tickets/index.html
+++ b/Conferencia/Tickets/index.html
@@ -15,23 +15,23 @@
 
   <nav class="navbar navbar-expand-lg navbar-light bg-dark bg-gradient">
     <div class="container-fluid">
-      <img src="https://i.ibb.co/hRn3Lg0/codoacodo.png" width="12%" alt="#">
+      <a href="https://www.buenosaires.gob.ar/educacion/codocodo/el-programa"><img src="https://i.ibb.co/hRn3Lg0/codoacodo.png" width="50%" alt="logo codo a codo"  ></a> 
 
-      <a class="navbar-brand text-white" href="#">Conf Bs As</a>
+      <a class="navbar-brand text-white" href="../Base/index.html">Conf Bs As</a>
 
       <div class="collapse navbar-collapse d-flex justify-content-end " id="navbarSupportedContent">
         <ul class="navbar-nav ">
           <li class="nav-item">
-            <a class="nav-link text-white" href="#">La conferencia</a>
+            <a class="nav-link text-white" href="../Base/index.html">La conferencia</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-secondary" href="#oradores">Los oradores</a>
+            <a class="nav-link text-secondary" href="../Base/index.html#oradores">Los oradores</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-secondary" href="#honolulu">El lugar y la fecha</a>
+            <a class="nav-link text-secondary" href="../Base/index.html#honolulu">El lugar y la fecha</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link text-secondary" href="#form">Conviértete en orador</a>
+            <a class="nav-link text-secondary" href="../Base/index.html#form">Conviértete en orador</a>
           </li>
           <li class="nav-item">
             <a class="nav-link text-success" href="#">Comprar tickets</a>
@@ -159,7 +159,7 @@
         <a class="nav-link text-white text-wrap" href="#footer">Prensa</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-white text-wrap" href="#">Conferencia</a>
+        <a class="nav-link text-white text-wrap" href="../Base/index.html">Conferencia</a>
       </li>
       <li class="nav-item">
         <a class="nav-link text-white text-wrap text-center" href="#footer" style="width: 9rem;">Términos y
