optimization visual layers

--- a/Conferencia/Tickets/index.html
+++ b/Conferencia/Tickets/index.html
@@ -133,8 +133,8 @@
 
         <div class="row d-flex justify-content-center">
 
-          <button id="enviar" type="reset" class="btn col-lg-4 mt-3 me-3" onclick="cleaner()">Borrar</button>
-          <button id="enviar" type="submit" value="submit" class="btn col-lg-4 mt-3">Resumen</button>
+          <button id="enviar" type="reset" class="btn col-lg-4 mt-3 border border-white" onclick="cleaner()">Borrar</button>
+          <button id="enviar" type="submit" value="submit" class="btn col-lg-4 mt-3 border border-white">Resumen</button>
         </div>
 
       </form>
