--- a/Conferencia/Base/index.html
+++ b/Conferencia/Base/index.html
@@ -130,7 +130,7 @@
         </div>
         <div class="col-md-6 border border-white">
           <div class="card-body ">
-            <h5 class="card-title fs-4 text-white">Bs As Octubre</h5>
+            <h5 class="card-title fs-4 text-white">Bs As - Octubre</h5>
             <p class="card-text text-white-50">Buenos Aires es la provincia y localidad más grande del estado de
               Argentina, en los Estados Unidos, Honolulu es la más sureña de entre las principales ciudades
               estadounidenses. Aunque el nombre de Honolulu se refiere al área urbana en la costa sureste de la isla de
