update styles link

--- a/Conferencia/Base/index.html
+++ b/Conferencia/Base/index.html
@@ -23,7 +23,7 @@
       <div class="collapse navbar-collapse d-flex justify-content-end " id="navbarSupportedContent">
         <ul class="navbar-nav ">
           <li class="nav-item">
-            <a class="nav-link text-white" href="#">La conferencia</a>
+            <a class="nav-link text-secondary btn btn-outline-light text-withe border-0" href="#">La conferencia</a>
           </li>
           <li class="nav-item">
             <a class="nav-link text-secondary btn btn-outline-light text-withe border-0" href="#oradores">Los oradores</a>
@@ -36,7 +36,7 @@
           </li>
 
           <li class="nav-item">
-            <a id="ticket" class="nav-link text-success " href="../Tickets/index.html">Comprar tickets</a>
+            <a id="ticket" class="nav-link text-success btn btn-outline-success text-withe border-0 " href="../Tickets/index.html">Comprar tickets</a>
           </li>
         </ul>
 
@@ -154,7 +154,8 @@
               estadounidenses. Aunque el nombre de Honolulu se refiere al área urbana en la costa sureste de la isla de
               Oahu, la ciudad y el condado de Honolulu han formado una ciudad-condado consolidada que cubre toda la
               ciudad (aproximadamente 600 km de superficie).</p>
-            <button type="button" class="btn btn-outline-light text-secondary">Conocé más</button>
+            <button type="button" class="btn btn-outline-light text-secondary" onclick="window.open('https://turismo.buenosaires.gob.ar/es#informacion'); ;" href="https://turismo.buenosaires.gob.ar/es#informacion" >Conocé más</button>
+            <!-- https://turismo.buenosaires.gob.ar/es#informacion -->
           </div>
         </div>
       </div>
