--- a/Conferencia/Tickets/index.html
+++ b/Conferencia/Tickets/index.html
@@ -162,7 +162,7 @@
 
   </div>
 
-  <footer id="footer" class="mt-3">
+  <footer id="footer" class=" mt-4">
 
     <ul class="nav justify-content-center pt-2 pb-2  text-decoration-none ">
 
@@ -176,10 +176,10 @@
         <a class="nav-link text-white text-wrap" href="#footer">Prensa</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-white text-wrap" href="../Base/index.html">Conferencia</a>
+        <a class="nav-link text-white text-wrap" href="#">Conferencia</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link text-white text-wrap text-center" href="#footer" style="width: 9rem;">Términos y
+        <a class="nav-link text-white text-wrap text-center" href="#footer" style="width: 6rem;">Términos y
           condiciones</a>
       </li>
       <li class="nav-item">
@@ -191,8 +191,8 @@
     </ul>
 
 
-    <ul class="nav justify-content-center text-decoration-none border border-secondary">
-      <li class="nav-item mb-0 pb-0">
+    <ul class="nav justify-content-center pt-2 pb-2 text-decoration-none border border-secondary">
+      <li class="nav-item">
         <a class="nav-link text-secondary" href="https://www.linkedin.com/in/fragusan/" target="_blank"
           rel="noopener noreferrer">Construida con 💛 by Fragusan <svg xmlns="http://www.w3.org/2000/svg" width="16"
             height="16" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
